# achievement-game-solana

./: .gitignore  README.md  runbooks.yml  txtx.yml
achieve-game/: .env  Anchor.toml  readme.md  tsconfig.json  txtx.yml
achieve-game/app/: README.md  config-overrides.js  package-lock.json  package.json  start.sh
achieve-game/app/config/: webpack.config.js
achieve-game/app/public/: index.html  manifest.json
achieve-game/app/src/: App.css  App.tsx  index.css
achieve-game/app/src/components/: GameInterface.tsx
achieve-game/app/src/idl/: achieve_game.json  reward_achie.json
achieve-game/app/src/utils/: connection.ts  program.ts
achieve-game/programs/achieve-game/: Cargo.toml
achieve-game/programs/achieve-game/src/: lib.rs
achieve-game/programs/quest/: Cargo.toml
achieve-game/programs/quest/src/: error.rs  lib.rs
achieve-game/programs/reward/: Cargo.toml
achieve-game/programs/reward/src/: err.rs  lib.rs
achieve-game/programs/reward/src/instructions/: claim_reward.rs  create_reward.rs  mod.rs
achieve-game/programs/reward/src/state/: reward.rs
achieve-game/programs/reward_achie/: Cargo.toml
achieve-game/programs/reward_achie/src/: lib.rs
achieve-game/runbooks/: README.md
achieve-game/runbooks/deployment/: main.tx
achieve-game/tests/: achieve-game.ts
call-program/: Cargo.toml
call-program/src/: main.rs
reward/: Anchor.toml  txtx.yml
reward/programs/reward/: Cargo.toml
reward/runbooks/: README.md
reward/runbooks/deployment/: main.tx
reward/tests/: reward.ts
runbooks/deployment/: main.tx  signers.localnet.tx
(+6 files in other folders)
